create games api and documentation
